# cddns

./: .dockerignore  Cargo.toml  Dockerfile  README.md  config.example.toml  docker-compose.yml
.github/workflows/: release.yml
proxmox/: create-lxc.sh  install.sh  uninstall.sh
src/: cloudflare.rs  config.rs  ip.rs  ipc.rs  main.rs  service.rs  tui.rs
