[package]
name = "cddns"
version = "0.1.0"
edition = "2021"
description = "A simple Cloudflare DDNS updater"

[dependencies]
# Cloudflare API
cloudflare = "0.14"

# Async runtime
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "net", "io-util", "sync"] }

# Config parsing
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# HTTP client for IP detection
reqwest = { version = "0.12", features = ["json"] }

# Error handling
anyhow = "1"

# CLI argument parsing
clap = { version = "4", features = ["derive", "env"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Cron scheduler
tokio-cron-scheduler = "0.13"

# IPC serialization
serde_json = "1"

# Directory utilities
dirs = "6"

# Date/time handling
chrono = "0.4"
